// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MetadataCuesContent /> should render properly with metadata 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 16px;
  background-color: #252525;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 15px;
  line-height: 19px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg,
.emotion-1 .noop svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #808080;
}

.emotion-2 {
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
    className="emotion-0"
  >
    <div>
      Clip Metadata
    </div>
    <button
      aria-label="Close Panel"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-2"
        data-file-name="doubleChevron.svg"
        height={20}
      />
    </button>
  </div>,
  .emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
}

.emotion-1 {
  border-bottom: 4px solid #3b3b3b;
  box-shadow: inset 3px 0 0 transparent;
}

.emotion-2 {
  padding: 16px;
  padding-bottom: 24px;
}

.emotion-2:not(:first-of-type) {
  border-top: 4px solid #3b3b3b;
}

.emotion-3 {
  font-weight: 700;
  font-size: 15px;
  line-height: 19px;
  color: #6088FE;
  padding-bottom: 16px;
}

.emotion-4 {
  font-family: Roboto Condensed;
  font-weight: 400;
  text-transform: uppercase;
  color: #808080;
  padding: 0;
  padding-bottom: 8px;
  border-bottom: 1px solid #3b3b3b;
  text-align: left;
}

.emotion-4:last-of-type {
  text-align: right;
  white-space: nowrap;
}

.emotion-4:nth-last-of-type(2) {
  width: 100%;
}

.emotion-6 td {
  vertical-align: bottom;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding: 8px;
  padding-left: 0;
  padding-right: 8px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-7:last-of-type {
  text-align: right;
  padding-right: 0;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          gcp-label-detection
        </div>
        <table>
          <thead>
            <tr>
              <th
                className="emotion-4"
              >
                content
              </th>
              <th
                className="emotion-4"
              >
                confidence score
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-6"
            >
              <td
                className="emotion-7"
              >
                cheese
              </td>
              <td
                className="emotion-7"
              >
                0.91
              </td>
            </tr>
            <tr
              className="emotion-6"
            >
              <td
                className="emotion-7"
              >
                pepperoni
              </td>
              <td
                className="emotion-7"
              >
                0.91
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          gcp-logo-detection
        </div>
        <table>
          <thead>
            <tr>
              <th
                className="emotion-4"
              >
                content
              </th>
              <th
                className="emotion-4"
              >
                confidence score
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-6"
            >
              <td
                className="emotion-7"
              >
                boon
              </td>
              <td
                className="emotion-7"
              >
                0.91
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          gcp-object-detection
        </div>
        <table>
          <thead>
            <tr>
              <th
                className="emotion-4"
              >
                content
              </th>
              <th
                className="emotion-4"
              >
                confidence score
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-6"
            >
              <td
                className="emotion-7"
              >
                food
              </td>
              <td
                className="emotion-7"
              >
                0.91
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;

exports[`<MetadataCuesContent /> should render properly with no metadata 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 16px;
  background-color: #252525;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 15px;
  line-height: 19px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg,
.emotion-1 .noop svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #808080;
}

.emotion-2 {
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
    className="emotion-0"
  >
    <div>
      Clip Metadata
    </div>
    <button
      aria-label="Close Panel"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-2"
        data-file-name="doubleChevron.svg"
        height={20}
      />
    </button>
  </div>,
  .emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
}

.emotion-1 {
  padding: 16px;
  color: #ffffff;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      No predictions have been detected in this asset at this time mark. Try scrubbing forward or backward.
    </div>
  </div>,
]
`;
